added the following attributes to the span: class=tool/ data-tip=/tabindex=

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
   
   <div id="wrap">
       
-      <h1>This is how a Tooltips works in CSS. <br />
-       Check it out!</h1>
-      <p>Have fun to discover how a <span>tooltips</span> is made using <span>CSS</span>. High five dude!</p>
+    <h1>This is how a Tooltips works in CSS. <br />
+     Check it out!</h1>
+    
+    <!-- added the class='tool'/data-tip='whit the sentence we want to say'/tabindex='1' for users that doesn't use mouse -->
+    <p>Have fun to discover how a <span class='tool' data-tip='this is cool' tabindex='1'>tooltips</span> is made using <span>CSS</span>. High five dude!</p>
 
   </div>
 
