completed the tooltips effect for both the spans, ready to move for ease effects with CSS3

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
      Check it out!</h1>
     
     <!-- added the class='tool'/data-tip='whit the sentence we want to say'/tabindex='1' for users that doesn't use mouse -->
-    <p>Have fun to discover how a <span class='tool' data-tip='this is cool' tabindex='1'>tooltips</span> is made using <span>CSS</span>. High five dude!</p>
+    <p>Have fun to discover how a <span class='tool' data-tip='this is cool' tabindex='1'>tooltips</span> is made using <span class='tool' data-tip="no...it's sick!" tabindex='2'>CSS</span>. High five dude!</p>
 
   </div>
 
