added more mountains images + background image

--- a/index.html
+++ b/index.html
@@ -12,11 +12,27 @@
   
   <div id="wrap">
       
-    <h1>This is how a Tooltips works in CSS. <br />
+    <h1>Pure CSS Tooltips<br />
      Check it out!</h1>
     
     <!-- added the class='tool'/data-tip='whit the sentence we want to say'/tabindex='1' for users that doesn't use mouse -->
     <p>Have fun to discover how a <span class='tool' data-tip='this is cool' tabindex='1'>tooltips</span> is made using <span class='tool' data-tip="no...it's sick!" tabindex='2'>CSS</span>. High five dude!</p>
+
+    <div class="main-content">
+      <img class="main-img" src="imgs/mountains.jpg" alt="mountains">
+    </div>
+
+    <p>Have fun to discover how a <span class='tool' data-tip='this is cool' tabindex='1'>tooltips</span> is made using <span class='tool' data-tip="no...it's sick!" tabindex='2'>CSS</span>. High five dude!</p>
+
+    <div class="main-content">
+      <img class="main-img" src="imgs/mountains_2.jpeg" alt="mountains">
+    </div>
+
+    <p>Have fun to discover how a <span class='tool' data-tip='this is cool' tabindex='1'>tooltips</span> is made using <span class='tool' data-tip="no...it's sick!" tabindex='2'>CSS</span>. High five dude!</p>
+
+    <div class="main-content">
+      <img class="main-img" src="imgs/mountains_3.jpeg" alt="mountains">
+    </div>
 
   </div>
 
